mejoras en errores
